--- a/doc/reference.dox
+++ b/doc/reference.dox
@@ -5,7 +5,7 @@
 #---------------------------------------------------------------------------
 PROJECT_NAME           = "async_mqtt5 reference"
 PROJECT_NUMBER         = 
-OUTPUT_DIRECTORY       = .
+OUTPUT_DIRECTORY       = ./bin
 CREATE_SUBDIRS         = NO
 OUTPUT_LANGUAGE        = English
 BRIEF_MEMBER_DESC      = YES
