--- a/doc/reference.dox
+++ b/doc/reference.dox
@@ -71,7 +71,7 @@ WARN_LOGFILE           =
 #---------------------------------------------------------------------------
 INPUT                  = ../include/async_mqtt5/error.hpp \
                          ../include/async_mqtt5/types.hpp \
-                         ../include/async_mqtt5/mqtt_client.hpp \
+                         ../include/async_mqtt5/mqtt_client.hpp
 FILE_PATTERNS          = 
 RECURSIVE              = NO
 EXCLUDE                =
