Add log invoke and logger
Summary: related to T15252, #24

Reviewers: ivica

Reviewed By: ivica

Subscribers: iljazovic, miljen

Maniphest Tasks: T15252

Differential Revision: https://repo.mireo.local/D32382

--- a/doc/reference.dox
+++ b/doc/reference.dox
@@ -70,6 +70,7 @@ WARN_LOGFILE           =
 # configuration options related to the input files
 #---------------------------------------------------------------------------
 INPUT                  = ../include/async_mqtt5/error.hpp \
+                         ../include/async_mqtt5/logger.hpp \
                          ../include/async_mqtt5/reason_codes.hpp \
                          ../include/async_mqtt5/types.hpp \
                          ../include/async_mqtt5/mqtt_client.hpp
